--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <!--       ***********    Habilidades  ************** -->
     <section id="skills" class="section skills-section">
         <div class="container">
-            <h2>Habilidades</h2>
+           <h2 class="section-title"><i class="ri-tools-line"></i> Habilidades</h2>
             <div class="skills-columns">
                 <!-- Columna Izquierda -->
                 <div class="skills-list">
