Ajustes de contacto

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 <li><a href="#trayectoria">Trayectoria</a></li>
                 <li><a href="#projects">Proyectos</a></li>
                 <li><a href="#blog">Blog</a></li>
-                <li><a href="#contacto">Contacto</a></li>
+                <li><a href="#cv-contacto">Contacto</a></li>
+
             </ul>
             <div class="nav-social">
                 <a href="https://github.com/ManuelinDora/" target="_blank" aria-label="GitHub"><i class="ri-github-line"></i></a>
