--- a/index.html
+++ b/index.html
@@ -145,59 +145,55 @@
     </section>
 
     <!--       ***********    Habilidades  ************** -->
-    <section id="skills" class="section skills-section">
-        <div class="container">
-            <h2 class="section-title"><i class="ri-tools-line"></i> Habilidades</h2>
-            <div class="skills-columns">
-                <!-- Columna Izquierda -->
-                <div class="skills-list">
-                    <div class="skill">
-                        <img src="images/figma_logo.png" alt="Figma" class="skill-icon-svg skill-float">
-                        <span>Figma</span>
-                    </div>
-                    <div class="skill">
-                        <img src="images/html_logo.png" alt="HTML" class="skill-icon-svg skill-float">
-                        <span>HTML</span>
-                    </div>
-                    <div class="skill">
-                        <img src="images/css_logo.png" alt="CSS" class="skill-icon-svg skill-float">
-                        <span>CSS</span>
-                    </div>
-                    <div class="skill">
-                        <img src="images/javascript_logo.png" alt="JavaScript" class="skill-icon-svg skill-float">
-                        <span>JavaScript</span>
-                    </div>
-                    <div class="skill">
-                        <img src="images/github_logo.png" alt="GitHub" class="skill-icon-svg skill-float">
-                        <span>GitHub</span>
-                    </div>
-                </div>
-                <!-- Columna Derecha -->
-                <div class="skills-list">
-                    <div class="skill">
-                        <img src="images/java_logo.png" alt="Java" class="skill-icon-svg skill-float">
-                        <span>Java</span>
-                    </div>
-                    <div class="skill">
-                        <img src="images/python_logo.png" alt="Python" class="skill-icon-svg skill-float">
-                        <span>Python</span>
-                    </div>
-                    <div class="skill">
-                        <img src="images/mysql_logo.png" alt="MySQL" class="skill-icon-svg skill-float">
-                        <span>MySQL</span>
-                    </div>
-                    <div class="skill">
-                        <img src="images/nodejs_logo.png" alt="Node.js" class="skill-icon-svg skill-float">
-                        <span>Node.js</span>
-                    </div>
-                    <div class="skill">
-                        <img src="images/aws_logo.png" alt="AWS" class="skill-icon-svg skill-float">
-                        <span>AWS</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+
+<section id="skills" class="section skills-section">
+  <div class="container">
+    <h2 class="section-title"><i class="ri-tools-line"></i> Habilidades</h2>
+    <div class="skills-grid">
+      <div class="skill">
+        <img src="images/figma_logo.png" alt="Figma" class="skill-icon-svg skill-float">
+        <span>Figma</span>
+      </div>
+      <div class="skill">
+        <img src="images/html_logo.png" alt="HTML" class="skill-icon-svg skill-float">
+        <span>HTML</span>
+      </div>
+      <div class="skill">
+        <img src="images/css_logo.png" alt="CSS" class="skill-icon-svg skill-float">
+        <span>CSS</span>
+      </div>
+      <div class="skill">
+        <img src="images/javascript_logo.png" alt="JavaScript" class="skill-icon-svg skill-float">
+        <span>JavaScript</span>
+      </div>
+      <div class="skill">
+        <img src="images/github_logo.png" alt="GitHub" class="skill-icon-svg skill-float">
+        <span>GitHub</span>
+      </div>
+      <div class="skill">
+        <img src="images/java_logo.png" alt="Java" class="skill-icon-svg skill-float">
+        <span>Java</span>
+      </div>
+      <div class="skill">
+        <img src="images/python_logo.png" alt="Python" class="skill-icon-svg skill-float">
+        <span>Python</span>
+      </div>
+      <div class="skill">
+        <img src="images/mysql_logo.png" alt="MySQL" class="skill-icon-svg skill-float">
+        <span>MySQL</span>
+      </div>
+      <div class="skill">
+        <img src="images/nodejs_logo.png" alt="Node.js" class="skill-icon-svg skill-float">
+        <span>Node.js</span>
+      </div>
+      <div class="skill">
+        <img src="images/aws_logo.png" alt="AWS" class="skill-icon-svg skill-float">
+        <span>AWS</span>
+      </div>
+    </div>
+  </div>
+</section>
+
 
     <!-- ***********            Trayectoria            ********** -->
     <section id="trayectoria" class="section trayectoria-section">
